log
Thu Mar 26 07:05:58 PM UTC 2026: 
 tests:  12|0
total_score: 60/60
fe4bf91
Thu Mar 26 07:07:35 PM UTC 2026: 
 list.c | 75 ++++++------------------------------------------------------------
 1 file changed, 6 insertions(+), 69 deletions(-)
 tests:  0|6
total_score: 0/60
81f64a3
Thu Mar 26 07:18:00 PM UTC 2026: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/60
fa8efca
Thu Mar 26 07:26:38 PM UTC 2026: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
37d7b0b
Thu Mar 26 07:29:32 PM UTC 2026: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:98:22: error: ‘der’ undeclared (first use in this function)
   98 |         list->head = der;
      |                      ^~~
list.c:98:22: note: each undeclared identifier is reported only once for each function it appears in
aa99f88
Thu Mar 26 07:30:06 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
df24c3d
Thu Mar 26 07:30:54 PM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
f8f83fa
Thu Mar 26 07:34:08 PM UTC 2026: 
 list.c | 9 +--------
 1 file changed, 1 insertion(+), 8 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:97:12: error: unused variable ‘der’ [-Werror=unused-variable]
   97 |     Node * der = list->current->next;
      |            ^~~
list.c:96:12: error: unused variable ‘izq’ [-Werror=unused-variable]
   96 |     Node * izq = list->current->prev;
      |            ^~~
cc1: all warnings being treated as errors
b59e12b
Thu Mar 26 07:34:31 PM UTC 2026: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
1d0a01e
Thu Mar 26 07:35:34 PM UTC 2026: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
86f86c6
Thu Mar 26 07:38:13 PM UTC 2026: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 0/60
dd13f9d
Thu Mar 26 07:41:37 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/60
3149dc7
